--- a/后台/设计模式/设计模式.md
+++ b/后台/设计模式/设计模式.md
@@ -391,3 +391,152 @@ public static void main(String[] args) {
 > 这种模式创建了一个装饰类，用来包装原有的类，并在保持类方法签名完整性的前提下，提供了额外的功能。
 >
 > 通过下面的实例来演示装饰器模式的用法。其中，我们将把一个形状装饰上不同的颜色，同时又不改变形状类。
+
+#### 介绍
+
+> **意图：**动态地给一个对象添加一些额外的职责。就增加功能来说，装饰器模式相比生成子类更为灵活。
+>
+> **主要解决：**一般的，我们为了扩展一个类经常使用继承方式实现，由于继承为类引入静态特征，并且随着扩展功能的增多，子类会很膨胀。
+>
+> **何时使用：**在不想增加很多子类的情况下扩展类。
+>
+> **如何解决：**将具体功能职责划分，同时继承装饰者模式。
+>
+> **关键代码：** 1、Component 类充当抽象角色，不应该具体实现。 2、修饰类引用和继承 Component 类，具体扩展类重写父类方法。
+>
+> **应用实例：** 1、孙悟空有 72 变，当他变成"庙宇"后，他的根本还是一只猴子，但是他又有了庙宇的功能。 2、不论一幅画有没有画框都可以挂在墙上，但是通常都是有画框的，并且实际上是画框被挂在墙上。在挂在墙上之前，画可以被蒙上玻璃，装到框子里；这时画、玻璃和画框形成了一个物体。
+>
+> **优点：**装饰类和被装饰类可以独立发展，不会相互耦合，装饰模式是继承的一个替代模式，装饰模式可以动态扩展一个实现类的功能。
+>
+> **缺点：**多层装饰比较复杂。
+>
+> **使用场景：** 1、扩展一个类的功能。 2、动态增加功能，动态撤销。
+>
+> **注意事项：**可代替继承。
+
+#### 实现
+
+> 我们将创建一个 *Shape* 接口和实现了 *Shape* 接口的实体类。然后我们创建一个实现了 *Shape* 接口的抽象装饰类 *ShapeDecorator*，并把 *Shape*对象作为它的实例变量。
+>
+> *RedShapeDecorator* 是实现了 *ShapeDecorator* 的实体类。
+>
+> *DecoratorPatternDemo*，我们的演示类使用 *RedShapeDecorator* 来装饰 *Shape* 对象。
+
+![preview](../../static/image/v2-9386920bd0cf0b6ab67ee7a286187ece_r.jpg)
+
+**代码**
+
+- 准备一个Shape接口
+
+```java
+public interface Shape {
+    void draw();
+}
+```
+
+- 实现了Shape接口的实体类
+
+```java
+public class Circle implements Shape{
+    @Override
+    public void draw() {
+        System.out.println("Shape:Circle");
+    }
+}
+```
+
+- 实现了Shape接口的装饰器ShapeDecorator
+
+```java
+//Shape的装饰器
+public class ShapeDecorator implements Shape{
+    // 保存接口的引用
+    protected Shape shape;
+
+    //构造方法
+    public ShapeDecorator(Shape shape) {
+        this.shape = shape;
+    }
+
+    @Override
+    public void draw() {
+        shape.draw();
+    }
+}
+```
+
+- 设计需要扩展功能的装饰器
+
+```java
+public class RedShapeDecorator extends ShapeDecorator{
+    // 有参构造函数
+    public RedShapeDecorator(Shape shape) {
+        super(shape);
+    }
+
+    @Override
+    public void draw() {
+        //为了扩展draw的功能
+        super.draw();
+        //调色方法
+        setRedBorder();
+    }
+
+    private void setRedBorder(){
+        System.out.println("Border Color:Red");
+    }
+}
+```
+
+- 测试
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Shape circle = new Circle();
+        circle.draw();
+        System.out.println("==========================================");
+        //扩展circle.draw()方法的功能
+        RedShapeDecorator redCircle = new RedShapeDecorator(circle);
+        redCircle.draw();
+    }
+}
+```
+
+### 代理模式
+
+#### 概念
+
+> 在代理模式（Proxy Pattern）中，一个类代表另一个类的功能。这种类型的设计模式属于结构型模式。
+>
+> 在代理模式中，我们创建具有现有对象的对象，以便向外界提供功能接口。
+
+#### 介绍
+
+> **意图：**为其他对象提供一种代理以控制对这个对象的访问。
+>
+> **主要解决：**在直接访问对象时带来的问题，比如说：要访问的对象在远程的机器上。在面向对象系统中，有些对象由于某些原因（比如对象创建开销很大，或者某些操作需要安全控制，或者需要进程外的访问），直接访问会给使用者或者系统结构带来很多麻烦，我们可以在访问此对象时加上一个对此对象的访问层。
+>
+> **何时使用：**想在访问一个类时做一些控制。
+>
+> **如何解决：**增加中间层。
+>
+> **关键代码：**实现与被代理类组合。
+>
+> **应用实例：** 1、Windows 里面的快捷方式。 2、猪八戒去找高翠兰结果是孙悟空变的，可以这样理解：把高翠兰的外貌抽象出来，高翠兰本人和孙悟空都实现了这个接口，猪八戒访问高翠兰的时候看不出来这个是孙悟空，所以说孙悟空是高翠兰代理类。 3、买火车票不一定在火车站买，也可以去代售点。 4、一张支票或银行存单是账户中资金的代理。支票在市场交易中用来代替现金，并提供对签发人账号上资金的控制。 5、spring aop。
+>
+> **优点：** 1、职责清晰。 2、高扩展性。 3、智能化。
+>
+> **缺点：** 1、由于在客户端和真实主题之间增加了代理对象，因此有些类型的代理模式可能会造成请求的处理速度变慢。 2、实现代理模式需要额外的工作，有些代理模式的实现非常复杂。
+>
+> **使用场景：**按职责来划分，通常有以下使用场景： 1、远程代理。 2、虚拟代理。 3、Copy-on-Write 代理。 4、保护（Protect or Access）代理。 5、Cache代理。 6、防火墙（Firewall）代理。 7、同步化（Synchronization）代理。 8、智能引用（Smart Reference）代理。
+>
+> **注意事项：** 1、和适配器模式的区别：适配器模式主要改变所考虑对象的接口，而代理模式不能改变所代理类的接口。 2、和装饰器模式的区别：装饰器模式为了增强功能，而代理模式是为了加以控制。
+
+#### 静态代理
+
+- 角色分析：一般会使用接口或者抽象类来解决
+- 真实角色：被代理的角色
+- 代理角色：代理真实角色，代理真实角色后，我们一般会做一些附属操作
+- 客户：访问代理角色
+
