--- a/后台/设计模式/设计模式.md
+++ b/后台/设计模式/设计模式.md
@@ -540,4 +540,71 @@ public class Main {
 - 代理角色：代理真实角色，代理真实角色后，我们一般会做一些附属操作
 - 客户：访问代理角色
 
-123
+**实现**
+
+- 接口
+
+```java
+//租房
+public interface Rent {
+    void sent();
+}
+```
+
+- 实现了接口的实体
+
+```java
+//房东
+public class Host implements Rent {
+    @Override
+    public void sent() {
+        System.out.println("房东要出租房子!");
+    }
+}
+```
+
+- 代理类（也需要实现接口）
+
+```java
+public class Proxy implements Rent{
+    private Host host;
+
+    public Proxy(Host host) {
+        this.host = host;
+    }
+
+    //扩展功能: 看房
+    public void seeHours(){
+        System.out.println("中介代你看房");
+    }
+
+    @Override
+    public void sent() {
+        host.sent();
+    }
+}
+```
+
+- 测试
+
+```java
+public class Client {
+    public static void main(String[] args) {
+        Host host = new Host();
+        Proxy proxy = new Proxy(host);
+
+        proxy.sent();
+        proxy.seeHours();
+    }
+}
+```
+
+代理模式的好处
+
+- 可以使真实角色的操作更加纯粹！不用去关注一些公共的业务
+- 公共也就交给代理角色！实现了业务的分工！
+- 公共业务发生扩展的时候，方便集中管理！
+
+缺点：
+
+- 一个真实角色就会产生一个代理类；代码量会翻倍
