--- a/后台/设计模式/设计模式.md
+++ b/后台/设计模式/设计模式.md
@@ -608,3 +608,227 @@ public class Client {
 缺点：
 
 - 一个真实角色就会产生一个代理类；代码量会翻倍
+
+#### 动态代理
+
+- 实现ProxyInvocationHandler类
+
+```java
+//自动生成代理类
+public class ProxyInvocationHandler implements InvocationHandler {
+
+    //被代理的接口
+    private Rent rent;
+
+    public void setRent(Rent rent) {
+        this.rent = rent;
+    }
+
+    //生成得到代理类
+    public Object getProxy() {
+        return Proxy.newProxyInstance(this.getClass().getClassLoader(), rent.getClass().getInterfaces(), this);
+    }
+
+    @Override  //处理代理实例，并放回结果
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        //动态代理的本质，就是使用反射机制实现的！
+        return method.invoke(rent, args);
+    }
+}
+```
+
+- 获得代理类
+
+```java
+public static void main(String[] args) {
+    //真实角色
+    Host host = new Host();
+
+    //代理角色
+    ProxyInvocationHandler proxyInvocationHandler = new ProxyInvocationHandler();
+    proxyInvocationHandler.setRent(host);
+    //获取代理类
+    //放回的是接口类型
+    Rent proxy = (Rent) proxyInvocationHandler.getProxy();  //这里的返回类型是接口类型
+
+    proxy.sent();
+}
+```
+
+##### Cglib动态代理
+
+```java
+public class ProxyInvocationHandler implements MethodInterceptor {
+    // 根据Class对象获取该对象的代理类
+    public Object getProxy(Class clazz){
+        Enhancer enhancer = new Enhancer();
+        //设置被代理类
+        enhancer.setSuperclass(clazz);
+        //设置拦截器
+        enhancer.setCallback(this);
+
+        return enhancer.create();
+    }
+
+    @Override
+    public Object intercept(Object obj, Method method, Object[] args, MethodProxy proxy) throws Throwable {
+        System.out.println("执行方法前");
+        //执行被代理类的方法
+        Object o = proxy.invokeSuper(obj, args);
+        System.out.println("执行方法后");
+        return o;
+    }
+}
+```
+
+- 实现回调过滤器 CallbackFilter
+
+```java
+/**
+ * Created by YangTao
+ */
+public class TargetCallbackFilter implements CallbackFilter {
+    @Override
+    public int accept(Method method) {
+        if ("hobby".equals(method.getName()))
+            return 1;
+        else
+            return 0;
+    }
+}
+```
+
+- 为演示调用不同的方法拦截器，在 Enhancer 设置中，使用`Enhancer#setCallbacks`设置多个方法拦截器，参数是一个数组，`TargetCallbackFilter#accept`返回的数字即为该数组的索引，决定调用的回调选择器。
+
+默认调用第一个
+
+```java
+/**
+ * Created by YangTao
+ */
+public class CglibProxy {
+
+    public static Object getProxy(Class<?> clazz){
+        Enhancer enhancer = new Enhancer();
+        enhancer.setClassLoader(clazz.getClassLoader());
+        enhancer.setSuperclass(clazz);
+        enhancer.setCallbacks(new Callback[]{new TargetInterceptor(), new TargetInterceptor2()});
+        enhancer.setCallbackFilter(new TargetCallbackFilter());
+        return enhancer.create();
+    }
+
+}
+```
+
+![img](../../static/image/v2-761aa6e9ca266bd69b06abf4913485d6_720w.jpg)
+
+#### 模板模式
+
+在模板模式（Template Pattern）中，一个抽象类公开定义了执行它的方法的方式/模板。它的子类可以按需要重写方法实现，但调用将以抽象类中定义的方式进行。这种类型的设计模式属于行为型模式。
+
+- 介绍
+
+> **意图：**定义一个操作中的算法的骨架，而将一些步骤延迟到子类中。模板方法使得子类可以不改变一个算法的结构即可重定义该算法的某些特定步骤。
+>
+> **主要解决：**一些方法通用，却在每一个子类都重新写了这一方法。
+>
+> **何时使用：**有一些通用的方法。
+>
+> **如何解决：**将这些通用算法抽象出来。
+>
+> **关键代码：**在抽象类实现，其他步骤在子类实现。
+>
+> **应用实例：** 1、在造房子的时候，地基、走线、水管都一样，只有在建筑的后期才有加壁橱加栅栏等差异。 2、西游记里面菩萨定好的 81 难，这就是一个顶层的逻辑骨架。 3、spring 中对 Hibernate 的支持，将一些已经定好的方法封装起来，比如开启事务、获取 Session、关闭 Session 等，程序员不重复写那些已经规范好的代码，直接丢一个实体就可以保存。
+>
+> **优点：** 1、封装不变部分，扩展可变部分。 2、提取公共代码，便于维护。 3、行为由父类控制，子类实现。
+>
+> **缺点：**每一个不同的实现都需要一个子类来实现，导致类的个数增加，使得系统更加庞大。
+>
+> **使用场景：** 1、有多个子类共有的方法，且逻辑相同。 2、重要的、复杂的方法，可以考虑作为模板方法。
+>
+> **注意事项：**为防止恶意操作，一般模板方法都加上 final 关键词。
+
+- 实现
+
+创建一个抽象类，他的模板方法设置为Final
+
+```java
+public abstract class Game {
+   abstract void initialize();
+   abstract void startPlay();
+   abstract void endPlay();
+ 
+   //模板
+   public final void play(){
+ 
+      //初始化游戏
+      initialize();
+ 
+      //开始游戏
+      startPlay();
+ 
+      //结束游戏
+      endPlay();
+   }
+}
+```
+
+创建扩展了上述类的实体类。
+
+```java
+public class Cricket extends Game {
+ 
+   @Override
+   void endPlay() {
+      System.out.println("Cricket Game Finished!");
+   }
+ 
+   @Override
+   void initialize() {
+      System.out.println("Cricket Game Initialized! Start playing.");
+   }
+ 
+   @Override
+   void startPlay() {
+      System.out.println("Cricket Game Started. Enjoy the game!");
+   }
+}
+```
+
+```java
+public class Football extends Game {
+ 
+   @Override
+   void endPlay() {
+      System.out.println("Football Game Finished!");
+   }
+ 
+   @Override
+   void initialize() {
+      System.out.println("Football Game Initialized! Start playing.");
+   }
+ 
+   @Override
+   void startPlay() {
+      System.out.println("Football Game Started. Enjoy the game!");
+   }
+}
+```
+
+- 测试
+
+```java
+public class TemplatePatternDemo {
+   public static void main(String[] args) {
+ 
+      Game game = new Cricket();
+      //play()方法定义在抽象类中
+      game.play();
+      System.out.println();
+      game = new Football();
+      //play()方法定义在抽象类中
+      game.play();      
+   }
+}
+```
+
