--- a/后台/spring-cloud/5.配置管理.md
+++ b/后台/spring-cloud/5.配置管理.md
@@ -62,6 +62,7 @@ spring:
       config:
         server-addr: 8.135.99.129:8848
         file-extension: yml
+        group: DEFAULT_GROUP # 默认为defaultgroup
 ```
 
 #### Nacos中的配置文件
