--- a/后台/spring-cloud/2.服务注册于发现中心.md
+++ b/后台/spring-cloud/2.服务注册于发现中心.md
@@ -24,3 +24,137 @@ docker-compose -f example/standalone-mysql-8.yaml up
 docker-compose -f example/cluster-hostname.yaml up
 ```
 
+### 配置文件
+
+#### 单机MySQL-8
+
+> compose.yml配置文件
+
+```yml
+version: "2"
+services:
+  nacos:
+    image: nacos/nacos-server
+    container_name: nacos-standalone-mysql
+    env_file:
+      - ../env/nacos-standlone-mysql.env # nacos的配置文件
+    volumes:
+      - ./standalone-logs/:/home/nacos/logs
+      - ./init.d/custom.properties:/home/nacos/init.d/custom.properties
+    ports:
+      - "8848:8848"
+      - "9555:9555"
+    depends_on:
+      - mysql
+    restart: always
+  mysql:
+    container_name: mysql
+    image: nacos/nacos-mysql:8.0.16
+    env_file:
+      - ../env/mysql.env # mysql的配置文件
+    volumes:
+      - ./mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
+```
+
+> mysql配置文件
+
+```properties
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=nacos_devtest
+MYSQL_USER=nacos
+MYSQL_PASSWORD=nacos
+```
+
+> nacos 配置文件
+
+```properties
+PREFER_HOST_MODE=hostname
+#单机模式
+MODE=standalone
+#数据源平台
+SPRING_DATASOURCE_PLATFORM=mysql
+MYSQL_SERVICE_HOST=mysql
+MYSQL_SERVICE_DB_NAME=nacos_devtest
+MYSQL_SERVICE_PORT=3306
+MYSQL_SERVICE_USER=nacos
+MYSQL_SERVICE_PASSWORD=nacos
+```
+
+#### 集群mysql-5的配置文件
+
+> compose.yml配置文件
+
+```yml
+version: "3"
+services:
+  nacos1:
+    hostname: nacos1
+    container_name: nacos1
+    image: nacos/nacos-server:${NACOS_VERSION} # version字段需要自己修改
+    volumes:
+      - ./cluster-logs/nacos1:/home/nacos/logs
+      - ./init.d/custom.properties:/home/nacos/init.d/custom.properties
+    ports:
+      - "8848:8848"
+      - "9555:9555"
+    env_file:
+      - ../env/nacos-hostname.env
+    restart: always
+    depends_on:
+      - mysql
+
+  nacos2:
+    hostname: nacos2
+    image: nacos/nacos-server:${NACOS_VERSION}
+    container_name: nacos2
+    volumes:
+      - ./cluster-logs/nacos2:/home/nacos/logs
+      - ./init.d/custom.properties:/home/nacos/init.d/custom.properties
+    ports:
+      - "8849:8848"
+    env_file:
+      - ../env/nacos-hostname.env
+    restart: always
+    depends_on:
+      - mysql
+  nacos3:
+    hostname: nacos3
+    image: nacos/nacos-server:${NACOS_VERSION}
+    container_name: nacos3
+    volumes:
+      - ./cluster-logs/nacos3:/home/nacos/logs
+      - ./init.d/custom.properties:/home/nacos/init.d/custom.properties
+    ports:
+      - "8850:8848"
+    env_file:
+      - ../env/nacos-hostname.env
+    restart: always
+    depends_on:
+      - mysql
+  mysql:
+    container_name: mysql
+    image: nacos/nacos-mysql:5.7
+    env_file:
+      - ../env/mysql.env # 配置文件和单机MySQL的一样
+    volumes:
+      - ./mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
+```
+
+> nacos配置文件
+
+```properties
+#nacos dev env
+PREFER_HOST_MODE=hostname
+#集群模式
+NACOS_SERVERS=nacos1:8848 nacos2:8848 nacos3:8848 
+MYSQL_SERVICE_HOST=mysql
+MYSQL_SERVICE_DB_NAME=nacos_devtest
+MYSQL_SERVICE_PORT=3306
+MYSQL_SERVICE_USER=nacos
+MYSQL_SERVICE_PASSWORD=nacos
+```
+
