--- a/Python/2.函数.md
+++ b/Python/2.函数.md
@@ -21,7 +21,7 @@ def power(x, n=2):
 
 #### 可变参数
 
-可变参数在函数内部是一个`tuple`元组
+可变参数允许方法接收多个参数，可变参数在函数内部是一个`tuple`元组
 
 ```python
 def calc(*number):
@@ -33,3 +33,12 @@ calc(*num)
 ```
 
 #### 关键字参数
+
+允许方法接收0个或任意个含参数名的参数，关键字参数在方法内部是一个`dict`字典（map）
+
+```python
+# 定义一个含有关键字参数的方法
+def person(name, age, **kw):
+    print("name: ", name, "age: ", age, "other: ", kw)
+```
+
