--- a/Python/2.函数.md
+++ b/Python/2.函数.md
@@ -39,6 +39,8 @@ calc(*num)
 ```python
 # 定义一个含有关键字参数的方法
 def person(name, age, **kw):
-    print("name: ", name, "age: ", age, "other: ", kw)
+    print('name: ', name, 'age: ', age, 'other: ', kw)
+# 调用 key = value  key不需要引号修饰
+person('张三', 19, 城市='北京')
 ```
 
