--- a/Python/1.python基础.md
+++ b/Python/1.python基础.md
@@ -109,6 +109,8 @@ while n > 0:
 
 `dictionary`相当于Java中的Map，键和值之间使用`:`隔开
 
+字典的key可以是`string`、`int`、`tuple`等不可变对象
+
 ```python
 >>> d = {'Michael': 95, 'Bob': 75, 'Tracy': 85}
 >>> d['Michael']
@@ -143,4 +145,4 @@ if 1 in b
 > dict 的 key 和 set 的元素都必须是`不可变对象`
 >
 > - str是不可变对象
-> - list 不是不可变对象
+> - list是可变对象
