--- a/后台/设计模式/设计模式.md
+++ b/后台/设计模式/设计模式.md
@@ -648,7 +648,7 @@ public static void main(String[] args) {
     ProxyInvocationHandler proxyInvocationHandler = new ProxyInvocationHandler();
     proxyInvocationHandler.setRent(host);
     //获取代理类
-    //放回的是接口类型
+    //返回的是接口类型
     Rent proxy = (Rent) proxyInvocationHandler.getProxy();  //这里的返回类型是接口类型
 
     proxy.sent();
